--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VM15RBB1D4"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-VM15RBB1D4');
+    </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -64,11 +73,16 @@
                 <div class="media">
                     <div class="logos photoss">
                         <ul>
-                            <li><a href="https://www.facebook.com/aarohanfest/" target="_blank"><i class="fab fa-facebook-f blue"></i></a></li>
-                            <li><a href="https://twitter.com/mitaarohanfest?t=tsYcxYJK6ms570ZgxMytog&s=09" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="https://www.instagram.com/mitaarohanfest/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                            <li><a href="https://www.linkedin.com/company/mit-wpu-aarohan-the-cultural-fest" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-                            <li><a href="https://youtube.com/channel/UCyJmLBKeNCxUFVx23Qvb26Q" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                            <li><a href="https://www.facebook.com/aarohanfest/" target="_blank"><i
+                                        class="fab fa-facebook-f blue"></i></a></li>
+                            <li><a href="https://twitter.com/mitaarohanfest?t=tsYcxYJK6ms570ZgxMytog&s=09"
+                                    target="_blank"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="https://www.instagram.com/mitaarohanfest/" target="_blank"><i
+                                        class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://www.linkedin.com/company/mit-wpu-aarohan-the-cultural-fest"
+                                    target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href="https://youtube.com/channel/UCyJmLBKeNCxUFVx23Qvb26Q" target="_blank"><i
+                                        class="fab fa-youtube"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -234,11 +248,16 @@
                 <div class="logoicon">
                     <div class="iconcontainer">
                         <ul>
-                            <li><a href="https://www.facebook.com/aarohanfest/" target="_blank"><i class="fab fa-facebook-f blue"></i></a></li>
-                            <li><a href="https://twitter.com/mitaarohanfest?t=tsYcxYJK6ms570ZgxMytog&s=09" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="https://www.instagram.com/mitaarohanfest/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                            <li><a href="https://www.linkedin.com/company/mit-wpu-aarohan-the-cultural-fest" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-                            <li><a href="https://youtube.com/channel/UCyJmLBKeNCxUFVx23Qvb26Q" target="_blank"><i class="fab fa-youtube"></i></a></li>
+                            <li><a href="https://www.facebook.com/aarohanfest/" target="_blank"><i
+                                        class="fab fa-facebook-f blue"></i></a></li>
+                            <li><a href="https://twitter.com/mitaarohanfest?t=tsYcxYJK6ms570ZgxMytog&s=09"
+                                    target="_blank"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="https://www.instagram.com/mitaarohanfest/" target="_blank"><i
+                                        class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://www.linkedin.com/company/mit-wpu-aarohan-the-cultural-fest"
+                                    target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href="https://youtube.com/channel/UCyJmLBKeNCxUFVx23Qvb26Q" target="_blank"><i
+                                        class="fab fa-youtube"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -252,7 +271,7 @@
                 time: 2000
             });
         });
-        
+
     </script>
     <script>
         var navLinks = document.getElementById("navLinks");
