--- a/sponsor/sponsor.html
+++ b/sponsor/sponsor.html
@@ -2,6 +2,15 @@
 <html>
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VM15RBB1D4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VM15RBB1D4');
+</script>
   <meta charset="utf-8">
   <title>MitAarohan | Sponsors | The Annual Cultural Fest of MIT WPU| Pune's Biggest College Fest|</title>
   <link rel="stylesheet" href="eventsnew.css">
