--- a/competition/comp.html
+++ b/competition/comp.html
@@ -2,10 +2,20 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VM15RBB1D4"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-VM15RBB1D4');
+    </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MitAarohan | Competitions | The Annual Cultural Fest of MIT WPU | Pune's Biggest College Fest|</title>    <link rel="stylesheet" href="eventsnew.css">
+    <title>MitAarohan | Competitions | The Annual Cultural Fest of MIT WPU | Pune's Biggest College Fest|</title>
+    <link rel="stylesheet" href="eventsnew.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&display=swap"
         rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -58,10 +68,13 @@
                     <div class="carousel-caption first">
                         <h2>In<span> SYNC</span></h2>
                         <h3>GROUP DANCE</h3>
-                        <p>When you dance, your purpose is not to get to a certain place on the floor, it's to enjoy each step along the way. So step up, and light up the stage !!</p>
+                        <p>When you dance, your purpose is not to get to a certain place on the floor, it's to enjoy
+                            each step along the way. So step up, and light up the stage !!</p>
                         <div class="viewpdf">
-                            <p><a href="https://drive.google.com/file/d/1cN3LQNbJmWle5h16MTsjtoXxtpa4TMEQ/view?usp=sharing"target="_blank" >View Brochure</a></p>
-                            <p><a href="https://drive.google.com/file/d/1a6w4w5spA7_ASOFZtF4VRzrBE3G3KMSb/view" target="_blank">View RuleBook</a></p>
+                            <p><a href="https://drive.google.com/file/d/1cN3LQNbJmWle5h16MTsjtoXxtpa4TMEQ/view?usp=sharing"
+                                    target="_blank">View Brochure</a></p>
+                            <p><a href="https://drive.google.com/file/d/1a6w4w5spA7_ASOFZtF4VRzrBE3G3KMSb/view"
+                                    target="_blank">View RuleBook</a></p>
                         </div>
                     </div>
                 </div>
@@ -70,11 +83,14 @@
                     <div class="carousel-caption">
                         <h2>HEAD<span> BANG</span></h2>
                         <h3>BAND WARS</h3>
-                        <p>Music could be a flute that soothes the soul, it could also be an electric guitar that fires up your veins. Show us what music is to you, in this battle of bands !!</p>
-                            <div class="viewpdf">
-                                <p><a href="https://drive.google.com/file/d/1cN3LQNbJmWle5h16MTsjtoXxtpa4TMEQ/view?usp=sharing"target="_blank" >View Brochure</a></p>
-                                <p><a href="https://drive.google.com/file/d/1a6w4w5spA7_ASOFZtF4VRzrBE3G3KMSb/view" target="_blank">View RuleBook</a></p>
-                            </div>
+                        <p>Music could be a flute that soothes the soul, it could also be an electric guitar that fires
+                            up your veins. Show us what music is to you, in this battle of bands !!</p>
+                        <div class="viewpdf">
+                            <p><a href="https://drive.google.com/file/d/1cN3LQNbJmWle5h16MTsjtoXxtpa4TMEQ/view?usp=sharing"
+                                    target="_blank">View Brochure</a></p>
+                            <p><a href="https://drive.google.com/file/d/1a6w4w5spA7_ASOFZtF4VRzrBE3G3KMSb/view"
+                                    target="_blank">View RuleBook</a></p>
+                        </div>
                     </div>
                 </div>
                 <div class="item">
@@ -82,10 +98,14 @@
                     <div class="carousel-caption">
                         <h2>DAS<span>TAK</span></h2>
                         <h3>STREET PLAY</h3>
-                        <p>Acting requires faith. You just have to believe that you are the person you're playing and that's what is happening is happening to the real you. Here's a platform for you to bring out all the drama you have stored within !!</p>
+                        <p>Acting requires faith. You just have to believe that you are the person you're playing and
+                            that's what is happening is happening to the real you. Here's a platform for you to bring
+                            out all the drama you have stored within !!</p>
                         <div class="viewpdf">
-                            <p><a href="https://drive.google.com/file/d/1cN3LQNbJmWle5h16MTsjtoXxtpa4TMEQ/view?usp=sharing"target="_blank" >View Brochure</a></p>
-                            <p><a href="https://drive.google.com/file/d/1a6w4w5spA7_ASOFZtF4VRzrBE3G3KMSb/view" target="_blank">View RuleBook</a></p>
+                            <p><a href="https://drive.google.com/file/d/1cN3LQNbJmWle5h16MTsjtoXxtpa4TMEQ/view?usp=sharing"
+                                    target="_blank">View Brochure</a></p>
+                            <p><a href="https://drive.google.com/file/d/1a6w4w5spA7_ASOFZtF4VRzrBE3G3KMSb/view"
+                                    target="_blank">View RuleBook</a></p>
                         </div>
                     </div>
                 </div>
@@ -94,10 +114,13 @@
                     <div class="carousel-caption">
                         <h2>INNER<span> FLAME</span></h2>
                         <h3>SOLO DANCING</h3>
-                        <p>Dance is the joy of movement and the heart of life and the one who dances don't need any wings to fly. Bring your best foot forward and participate !!</p>
+                        <p>Dance is the joy of movement and the heart of life and the one who dances don't need any
+                            wings to fly. Bring your best foot forward and participate !!</p>
                         <div class="viewpdf">
-                            <p><a href="https://drive.google.com/file/d/1cN3LQNbJmWle5h16MTsjtoXxtpa4TMEQ/view?usp=sharing"target="_blank" >View Brochure</a></p>
-                            <p><a href="https://drive.google.com/file/d/1a6w4w5spA7_ASOFZtF4VRzrBE3G3KMSb/view" target="_blank">View RuleBook</a></p>
+                            <p><a href="https://drive.google.com/file/d/1cN3LQNbJmWle5h16MTsjtoXxtpa4TMEQ/view?usp=sharing"
+                                    target="_blank">View Brochure</a></p>
+                            <p><a href="https://drive.google.com/file/d/1a6w4w5spA7_ASOFZtF4VRzrBE3G3KMSb/view"
+                                    target="_blank">View RuleBook</a></p>
                         </div>
                     </div>
                 </div>
@@ -106,10 +129,14 @@
                     <div class="carousel-caption">
                         <h2>HUMM<span>ING</span></h2>
                         <h3>SOLO SINGING</h3>
-                        <p>Music once admitted to the soul becomes a sort of spirit and never dies. It's the only medicine that the heart and soul needs. Register now to heal everyone with your voice and create magic !!</p>
+                        <p>Music once admitted to the soul becomes a sort of spirit and never dies. It's the only
+                            medicine that the heart and soul needs. Register now to heal everyone with your voice and
+                            create magic !!</p>
                         <div class="viewpdf">
-                            <p><a href="https://drive.google.com/file/d/1cN3LQNbJmWle5h16MTsjtoXxtpa4TMEQ/view?usp=sharing"target="_blank" >View Brochure</a></p>
-                            <p><a href="https://drive.google.com/file/d/1a6w4w5spA7_ASOFZtF4VRzrBE3G3KMSb/view" target="_blank">View RuleBook</a></p>
+                            <p><a href="https://drive.google.com/file/d/1cN3LQNbJmWle5h16MTsjtoXxtpa4TMEQ/view?usp=sharing"
+                                    target="_blank">View Brochure</a></p>
+                            <p><a href="https://drive.google.com/file/d/1a6w4w5spA7_ASOFZtF4VRzrBE3G3KMSb/view"
+                                    target="_blank">View RuleBook</a></p>
                         </div>
                     </div>
                 </div>
@@ -118,10 +145,13 @@
                     <div class="carousel-caption">
                         <h2>PLAT<span>FORM</span></h2>
                         <h3>OPEN MIC</h3>
-                        <p>Got a unique talent but can't find the platform to showcase it? Here's your chance to have the stage all to yourself, here's your chance to shine !!</p>
+                        <p>Got a unique talent but can't find the platform to showcase it? Here's your chance to have
+                            the stage all to yourself, here's your chance to shine !!</p>
                         <div class="viewpdf">
-                            <p><a href="https://drive.google.com/file/d/1cN3LQNbJmWle5h16MTsjtoXxtpa4TMEQ/view?usp=sharing"target="_blank" >View Brochure</a></p>
-                            <p><a href="https://drive.google.com/file/d/1a6w4w5spA7_ASOFZtF4VRzrBE3G3KMSb/view" target="_blank">View RuleBook</a></p>
+                            <p><a href="https://drive.google.com/file/d/1cN3LQNbJmWle5h16MTsjtoXxtpa4TMEQ/view?usp=sharing"
+                                    target="_blank">View Brochure</a></p>
+                            <p><a href="https://drive.google.com/file/d/1a6w4w5spA7_ASOFZtF4VRzrBE3G3KMSb/view"
+                                    target="_blank">View RuleBook</a></p>
                         </div>
                     </div>
                 </div>
