--- a/events/eventsnew.html
+++ b/events/eventsnew.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VM15RBB1D4"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-VM15RBB1D4');
+    </script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +18,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/4f82ca20d7.js" crossorigin="anonymous"></script>
-    <title>MitAarohan | Events | The Annual Cultural Fest of MIT WPU | Pune's Biggest College Fest|</title>    <link rel="stylesheet" href="eventsnew.css">
+    <title>MitAarohan | Events | The Annual Cultural Fest of MIT WPU | Pune's Biggest College Fest|</title>
+    <link rel="stylesheet" href="eventsnew.css">
     <link rel="icon" href="/img/logo2.png">
 
 </head>
